# TurinMachineComputingTheory

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TuringMachine.txt  main.c
Headers/: main.h
Sources/: main.c
include/: entities.h  libs.h  main.h
source/: main.c  main.cpp
